--- a/packages/mobile/src/button/src/button.less
+++ b/packages/mobile/src/button/src/button.less
@@ -1,18 +1,35 @@
 :root,
 :host {
-    
+    --pk-button-line-height-xs:1.1;
+    --pk-button-line-height-s:1.2;
+    --pk-button-line-height-m:1.7;
+    --pk-button-line-height-l:2;
+    --pk-button-line-height-xl:2.5;
 }
 
 
 
 .pk-button{
+    position: relative;
+    cursor: pointer;
+    border-radius: var(--pk-radius-m);
 
     &--primary{
         background: var(--pk-primary-color);
     }
 
     &--hazy{
-        background: var(--pk-primary-color-light);
+        &::before{
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: var(--pk-primary-color);
+            opacity: 0.2;
+            top: 0;
+            left: 0;
+            border-radius: inherit;
+        }
     }
 
     &--outline{
@@ -26,4 +43,54 @@
     &--link{
         
     }
+
+
+    &--xs{
+        padding:var(--pk-padding-s);
+        font-size: var(--pk-font-size-s);
+        line-height:var(--pk-button-line-height-xs);
+    }
+
+    &--s{
+        padding:var(--pk-padding-s);
+        font-size: var(--pk-font-size-s);
+        line-height:var(--pk-button-line-height-s);
+    }
+
+    &--m{
+        padding:var(--pk-padding-m);
+        font-size: var(--pk-font-size-m);
+        line-height:var(--pk-button-line-height-m);
+    }
+    
+    &--l{
+        padding:var(--pk-padding-m);
+        font-size: var(--pk-font-size-m);
+        line-height:var(--pk-button-line-height-l);
+    }
+
+    &--xl{
+        padding:var(--pk-padding-m);
+        font-size: var(--pk-font-size-l);
+        line-height:var(--pk-button-line-height-xl);
+    }
+
+    &--round {
+        border-radius: var(--pk-radius-max);
+    }
+
+    &--square {
+        border-radius: 0;
+    }
+
+    &--block{
+        display: block;
+        width: 100%;
+    }
+
+    &__text{
+        position: relative;
+        z-index: 1;
+    }
+    
 }
