--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -13,14 +13,27 @@
     --pk-info-color-deep:#82848A;
     --pk-success-color-deep:#258A33;
 
-    // 浅
-    --pk-primary-color-light:#FFE9D9;
-    --pk-error-color-light:#FCD2D2;
-    --pk-warning-color-light:#FAEEE1;
-    --pk-info-color-light:#F4F4F4;
-    --pk-success-color-light:#D2F7D7;
-
     // 禁用，基于普通
     --pk-disabled-opacity:.6;
 
+    //浅色
+    --pk-light-opacity:.2;
+
+
+    // 边距
+    --pk-padding-s:4px;
+    --pk-padding-m:8px;
+    --pk-padding-l:12px;
+
+    //圆角
+    --pk-radius-min:0;
+    --pk-radius-s:2px;
+    --pk-radius-m:4px;
+    --pk-radius-l:8px;
+    --pk-radius-max:9999999px;
+
+    // 字体
+    --pk-font-size-s:14px;
+    --pk-font-size-m:16px;
+    --pk-font-size-l:18px;
 }
