✨ feat: 完善button按钮组件

--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -36,4 +36,30 @@
     --pk-font-size-s:14px;
     --pk-font-size-m:16px;
     --pk-font-size-l:18px;
+
+    // 边框大小
+    --pk-border-width-s:0.8px;
+    --pk-border-width-m:1px;
+    --pk-border-width-l:2px;
+
+    //字体颜色
+    --pk-text-color:#FFFFFF;
+
+
+    //边框颜色
+    --pk-border-color:#DBDFE6;
+
+
+    //背景颜色
+    --pk-bg-color:#F5F7FA;
+    --pk-bg-invert:#FFFFFF;
+
+
+    // 层级
+    --pk-z-index-min:1;
+    --pk-z-index-min-2:2;
+    --pk-z-index-s:999;
+    --pk-z-index-m:9999;
+    --pk-z-index-l:99999;
+    --pk-z-index-max:999999999;
 }
