--- a/packages/mobile/src/button/src/button.less
+++ b/packages/mobile/src/button/src/button.less
@@ -5,6 +5,9 @@
     --pk-button-line-height-m:1.7;
     --pk-button-line-height-l:2;
     --pk-button-line-height-xl:2.5;
+
+    --pk-button-z-index-text:var(--pk-z-index-min);
+    --pk-button-z-index-mask:var(--pk-z-index-min-2);
 }
 
 
@@ -13,12 +16,39 @@
     position: relative;
     cursor: pointer;
     border-radius: var(--pk-radius-m);
+    box-shadow: none;
+    color: var(--pk-text-color);
+
+    &::after {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 100%;
+        height: 100%;
+        transform: translate(-50%,-50%);
+        background: var(--pk-bg-invert);
+        border: inherit;
+        border-color: var(--pk-bg-invert);
+        border-radius: inherit; 
+        opacity: 0;
+        content: ' ';
+        z-index: var(--pk-button-z-index-mask);
+    }
+
+    &:active::after {
+        opacity: .3;
+    }
 
     &--primary{
         background: var(--pk-primary-color);
+        border: var(--pk-border-width-s) solid var(--pk-primary-color);
     }
 
     &--hazy{
+        border: var(--pk-border-width-s) solid var(--pk-primary-color);
+        color: var(--pk-primary-color);
+        background: inherit;
+
         &::before{
             content: '';
             position: absolute;
@@ -33,15 +63,21 @@
     }
 
     &--outline{
-
+        border: var(--pk-border-width-s) solid var(--pk-border-color);
+        color: var(--pk-primary-color);
+        background: inherit;
     }
 
     &--ghost{
-
+        border: var(--pk-border-width-s) solid var(--pk-primary-color);
+        color: var(--pk-primary-color);
+        background: inherit;
     }
 
     &--link{
-        
+        background: inherit;
+        border: var(--pk-border-width-s) solid transparent;
+        color: var(--pk-primary-color);
     }
 
 
@@ -88,9 +124,16 @@
         width: 100%;
     }
 
+    &--disabled{
+        opacity: var(--pk-disabled-opacity);
+        &::after {
+            display: none;
+        }
+    }
+
     &__text{
         position: relative;
-        z-index: 1;
+        z-index: var(--pk-button-z-index-text);
     }
     
 }
