--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -33,6 +33,7 @@
     --pk-radius-max:9999999px;
 
     // 字体
+    --pk-font-size-xs:13px;
     --pk-font-size-s:14px;
     --pk-font-size-m:16px;
     --pk-font-size-l:18px;
