--- a/packages/mobile/src/button/src/button.less
+++ b/packages/mobile/src/button/src/button.less
@@ -9,9 +9,11 @@
 
     --pk-button-z-index-text:var(--pk-z-index-min);
     --pk-button-z-index-mask:var(--pk-z-index-min-2);
+
+    --pk-button-primary-background:var(--pk-primary-color);
+    --pk-button-primary-border-color:var(--pk-primary-color);
+    --pk-button-primary-text-color:var(--pk-primary-color);
 }
-
-
 
 .pk-button{
     position: relative;
@@ -40,14 +42,26 @@
         opacity: .3;
     }
 
+    &--danger{
+        --pk-button-primary-background:var(--pk-error-color);
+        --pk-button-primary-border-color:var(--pk-error-color);
+        --pk-button-primary-text-color:var(--pk-error-color);
+    }
+
+    &--warning{
+        --pk-button-primary-background:var(--pk-warning-color);
+        --pk-button-primary-border-color:var(--pk-warning-color);
+        --pk-button-primary-text-color:var(--pk-warning-color);
+    }
+
     &--primary{
-        background: var(--pk-primary-color);
-        border: var(--pk-border-width-s) solid var(--pk-primary-color);
+        background: var(--pk-button-primary-background);
+        border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
     }
 
     &--hazy{
-        border: var(--pk-border-width-s) solid var(--pk-primary-color);
-        color: var(--pk-primary-color);
+        border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
+        color: var(--pk-button-primary-text-color);
         background: inherit;
 
         &::before{
@@ -55,7 +69,7 @@
             position: absolute;
             width: 100%;
             height: 100%;
-            background: var(--pk-primary-color);
+            background: var(--pk-button-primary-background);
             opacity: 0.2;
             top: 0;
             left: 0;
@@ -65,20 +79,20 @@
 
     &--outline{
         border: var(--pk-border-width-s) solid var(--pk-border-color);
-        color: var(--pk-primary-color);
+        color: var(--pk-button-primary-text-color);
         background: inherit;
     }
 
     &--ghost{
-        border: var(--pk-border-width-s) solid var(--pk-primary-color);
-        color: var(--pk-primary-color);
+        border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
+        color: var(--pk-button-primary-text-color);
         background: inherit;
     }
 
     &--link{
         background: inherit;
         border: var(--pk-border-width-s) solid transparent;
-        color: var(--pk-primary-color);
+        color: var(--pk-button-primary-text-color);
     }
 
 
