--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -44,7 +44,10 @@
     --pk-border-width-l:2px;
 
     //字体颜色
-    --pk-text-color:#FFFFFF;
+    --pk-text-color:#333333;
+    --pk-text-color-invert:#FFFFFF;
+    --pk-text-color-secondary:#999999;
+    --pk-text-color-disabled:#D4D4D4;
 
 
     //边框颜色
@@ -52,8 +55,8 @@
 
 
     //背景颜色
-    --pk-bg-color:#F5F7FA;
-    --pk-bg-invert:#FFFFFF;
+    --pk-bg-color:#FFFFFF;
+    --pk-bg-invert:#000000;
 
 
     // 层级
