--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -58,6 +58,8 @@
     --pk-bg-color:#FFFFFF;
     --pk-bg-invert:#000000;
 
+    --pk-overlay-bg-color:rgba(0, 0, 0, 0.7);
+
 
     // 层级
     --pk-z-index-min:1;
@@ -65,5 +67,9 @@
     --pk-z-index-s:999;
     --pk-z-index-m:9999;
     --pk-z-index-l:99999;
-    --pk-z-index-max:999999999;
+    --pk-z-index-max:999999;
+    --pk-z-index-max-2:9999999;
+
+    //过渡/动画
+    --pk-transition-duration:.3s;
 }
