--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -72,4 +72,6 @@
 
     //过渡/动画
     --pk-transition-duration:.3s;
+    --pk-transition-timing-function-in:ease-in;
+    --pk-transition-timing-function-out:ease-out;
 }
