--- a/packages/mobile/src/popup/src/popup.less
+++ b/packages/mobile/src/popup/src/popup.less
@@ -1,4 +1,49 @@
 :root,
 :host {
+    --pk-popup-background:var(--pk-bg-color);
+    --pk-popup-z-index:var(--pk-z-index-max-2);
+}
+
+
+
+.pk-popup{
+    position: fixed;
+    max-height: 100%;
+    overflow-y: auto;
+    background: var(--pk-popup-background);
+    z-index: var(--pk-popup-z-index);
     
+    &--bottom {
+        bottom: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    
+    &--top {
+        top: 0;
+        left: 0;
+        width: 100%;
+    }
+
+    
+    &--left {
+        left: 0;
+        top: 0;
+        height: 100%;
+    }
+
+    
+    &--right {
+        right: 0;
+        top: 0;
+        height: 100%;
+    }
+
+
+    &--center {
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
