--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -1,77 +1,79 @@
-:root{
+:root {
     // 普通
-    --pk-primary-color:#FF6F00;
-    --pk-error-color:#F92F2F;
-    --pk-warning-color:#FFA238;
-    --pk-info-color:#8F9399;
-    --pk-success-color:#34B545;
+    --pk-primary-color: #FF6F00;
+    --pk-error-color: #F92F2F;
+    --pk-warning-color: #FFA238;
+    --pk-info-color: #8F9399;
+    --pk-success-color: #34B545;
 
     // 深
-    --pk-primary-color-deep:#E36200;
-    --pk-error-color-deep:#D42F2F;
-    --pk-warning-color-deep:#E39944;
-    --pk-info-color-deep:#82848A;
-    --pk-success-color-deep:#258A33;
+    --pk-primary-color-deep: #E36200;
+    --pk-error-color-deep: #D42F2F;
+    --pk-warning-color-deep: #E39944;
+    --pk-info-color-deep: #82848A;
+    --pk-success-color-deep: #258A33;
 
     // 禁用，基于普通
-    --pk-disabled-opacity:.6;
+    --pk-disabled-opacity: .6;
 
     //浅色
-    --pk-light-opacity:.2;
+    --pk-light-opacity: .2;
 
 
     // 边距
-    --pk-padding-s:4px;
-    --pk-padding-m:8px;
-    --pk-padding-l:12px;
+    --pk-padding-s: 4px;
+    --pk-padding-m: 8px;
+    --pk-padding-l: 12px;
 
     //圆角
-    --pk-radius-min:0;
-    --pk-radius-s:2px;
-    --pk-radius-m:4px;
-    --pk-radius-l:8px;
-    --pk-radius-max:9999999px;
+    --pk-radius-min: 0;
+    --pk-radius-s: 2px;
+    --pk-radius-m: 4px;
+    --pk-radius-l: 8px;
+    --pk-radius-max: 9999999px;
 
     // 字体
-    --pk-font-size-xs:13px;
-    --pk-font-size-s:14px;
-    --pk-font-size-m:16px;
-    --pk-font-size-l:18px;
+    --pk-font-size-xs: 13px;
+    --pk-font-size-s: 14px;
+    --pk-font-size-m: 16px;
+    --pk-font-size-l: 18px;
 
     // 边框大小
-    --pk-border-width-s:0.8px;
-    --pk-border-width-m:1px;
-    --pk-border-width-l:2px;
+    --pk-border-width-s: 0.8px;
+    --pk-border-width-m: 1px;
+    --pk-border-width-l: 2px;
 
     //字体颜色
-    --pk-text-color:#333333;
-    --pk-text-color-invert:#FFFFFF;
-    --pk-text-color-secondary:#999999;
-    --pk-text-color-disabled:#D4D4D4;
+    --pk-text-color: #333333;
+    --pk-text-color-invert: #FFFFFF;
+    --pk-text-color-secondary: #999999;
+    --pk-text-color-disabled: #D4D4D4;
 
 
     //边框颜色
-    --pk-border-color:#DBDFE6;
+    --pk-border-color: #DBDFE6;
 
 
     //背景颜色
-    --pk-bg-color:#FFFFFF;
-    --pk-bg-invert:#000000;
+    --pk-bg-color: #FFFFFF;
+    --pk-bg-invert: #000000;
 
-    --pk-overlay-bg-color:rgba(0, 0, 0, 0.7);
+    --pk-overlay-bg-color: rgba(0, 0, 0, 0.7);
+    --pk-toast-bg-color: rgba(0, 0, 0, 0.7);
+    --pk-toast-text-color: var(--pk-text-color-invert);
 
 
     // 层级
-    --pk-z-index-min:1;
-    --pk-z-index-min-2:2;
-    --pk-z-index-s:999;
-    --pk-z-index-m:9999;
-    --pk-z-index-l:99999;
-    --pk-z-index-max:999999;
-    --pk-z-index-max-2:9999999;
+    --pk-z-index-min: 1;
+    --pk-z-index-min-2: 2;
+    --pk-z-index-s: 999;
+    --pk-z-index-m: 9999;
+    --pk-z-index-l: 99999;
+    --pk-z-index-max: 999999;
+    --pk-z-index-max-2: 9999999;
 
     //过渡/动画
-    --pk-transition-duration:.3s;
-    --pk-transition-timing-function-in:ease-in;
-    --pk-transition-timing-function-out:ease-out;
+    --pk-transition-duration: .3s;
+    --pk-transition-timing-function-in: ease-in;
+    --pk-transition-timing-function-out: ease-out;
 }
