--- a/packages/mobile/src/toast/src/toast.less
+++ b/packages/mobile/src/toast/src/toast.less
@@ -1,10 +1,37 @@
 :root,
 :host {
-   
+    --pk-toast-position-top-distance: 20%;
+    --pk-toast-position-bottom-distance: 20%;
+    --pk-toast-background: var(--pk-toast-bg-color);
+    --pk-toast-text-color: var(--pk-toast-text-color);
+    --pk-toast-padding-s: var(--pk-padding-s);
+    --pk-toast-padding-l: var(--pk-padding-l);
+    --pk-toast-border-radius: var(--pk-radius-m);
+    --pk-toast-font-size: var(--pk-font-size-xs);
 }
 
 
 
-.pk-toast{
-    
+.pk-toast {
+    background: var(--pk-toast-background);
+    padding: var(--pk-toast-padding-s) var(--pk-toast-padding-l);
+    border-radius: var(--pk-toast-border-radius);
+
+    &__icon {}
+
+    &__text {
+        color: var(--pk-toast-text-color);
+        font-size: var(--pk-toast-font-size);
+    }
+
+
+    &--top {
+        top: var(--pk-toast-position-top-distance);
+    }
+
+    &--bottom {
+        bottom: var(--pk-toast-position-top-distance);
+    }
+
+    &--center {}
 }
