--- a/packages/mobile/src/toast/src/toast.less
+++ b/packages/mobile/src/toast/src/toast.less
@@ -1,7 +1,7 @@
 :root,
 :host {
-    --pk-toast-position-top-distance: 20%;
-    --pk-toast-position-bottom-distance: 20%;
+    --pk-toast-position-top-distance: 5%;
+    --pk-toast-position-bottom-distance: 5%;
     --pk-toast-background: var(--pk-toast-bg-color);
     --pk-toast-text-color: var(--pk-toast-text-color);
     --pk-toast-padding-s: var(--pk-padding-s);
@@ -13,9 +13,12 @@
 
 
 .pk-toast {
+    position: fixed;
     background: var(--pk-toast-background);
     padding: var(--pk-toast-padding-s) var(--pk-toast-padding-l);
     border-radius: var(--pk-toast-border-radius);
+    left: 50%;
+    transform: translateX(-50%);
 
     &__icon {}
 
@@ -33,5 +36,7 @@
         bottom: var(--pk-toast-position-top-distance);
     }
 
-    &--center {}
+    &--center {
+        width: max-content;
+    }
 }
