--- a/packages/mobile/style/animation.less
+++ b/packages/mobile/style/animation.less
@@ -118,3 +118,13 @@
     animation: var(--pk-transition-duration) pk-slide-down-leave var(--pk-transition-timing-function-out);
   }
 }
+
+@keyframes pk-rotate {
+  from {
+    transform: rotate(0deg);
+  }
+
+  to {
+    transform: rotate(360deg);
+  }
+}
