--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -74,6 +74,7 @@
 
     //过渡/动画
     --pk-transition-duration: .3s;
+    --pk-animation-duration: 1s;
     --pk-transition-timing-function-in: ease-in;
     --pk-transition-timing-function-out: ease-out;
 }
