--- a/packages/mobile/src/action-sheet/src/action-sheet.less
+++ b/packages/mobile/src/action-sheet/src/action-sheet.less
@@ -11,7 +11,7 @@
 .pk-action-sheet {
     color: var(--pk-action-sheet-color);
     background: var(--pk-bg-color);
-    border-radius: var(--pk-radius-l);
+    border-radius: var(--pk-radius-l) var(--pk-radius-l) 0 0;
 
     &__header {
         padding: var(--pk-padding-l);
