✨ feat: 完善picker-view组件

--- a/packages/mobile/src/picker-view/src/picker-view.less
+++ b/packages/mobile/src/picker-view/src/picker-view.less
@@ -7,6 +7,12 @@
     &__content {}
 
     &__column {
-        &__item {}
+        overflow: hidden;
+    }
+
+    &__item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
