✨ feat: picker-view完善

--- a/packages/mobile/src/picker-view/src/picker-view.less
+++ b/packages/mobile/src/picker-view/src/picker-view.less
@@ -8,7 +8,10 @@
 
     &__column {
         overflow: hidden;
+        background: red;
     }
+
+    &__wrapper {}
 
     &__item {
         display: flex;
