✨ feat: 完善picker-column组件

--- a/packages/mobile/src/picker-view/src/picker-view.less
+++ b/packages/mobile/src/picker-view/src/picker-view.less
@@ -6,7 +6,13 @@
 .pk-picker-view {
     position: relative;
 
-    &__content {}
+    &__content {
+        display: flex;
+    }
+
+    &__wrapper {
+        flex: 1;
+    }
 
     &--top {
         position: absolute;
