--- a/packages/mobile/src/picker-view/src/picker-view.less
+++ b/packages/mobile/src/picker-view/src/picker-view.less
@@ -20,7 +20,20 @@
         top: 0;
         left: 0;
         pointer-events: none;
-        background: rgba(255, 255, 255, .8);
+        background: var(--pk-bg-color);
+        opacity: .8;
+
+        &::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            width: 200%;
+            height: 1px;
+            background: var(--pk-bg-invert);
+            transform: scaleY(.5) translateX(-50%);
+            opacity: .2;
+        }
     }
 
 
@@ -30,6 +43,19 @@
         bottom: 0;
         left: 0;
         pointer-events: none;
-        background: rgba(255, 255, 255, .8);
+        background: var(--pk-bg-color);
+        opacity: .8;
+
+        &::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 50%;
+            width: 200%;
+            height: 1px;
+            background: var(--pk-bg-invert);
+            transform: scaleY(.5) translateX(-50%);
+            opacity: .2;
+        }
     }
 }
