--- a/packages/mobile/theme/index.less
+++ b/packages/mobile/theme/index.less
@@ -25,6 +25,10 @@
     --pk-padding-m: 8px;
     --pk-padding-l: 12px;
 
+    --pk-margin-s: 4px;
+    --pk-margin-m: 8px;
+    --pk-margin-l: 12px;
+
     //圆角
     --pk-radius-min: 0;
     --pk-radius-s: 2px;
