--- a/packages/mobile/src/button/src/button.less
+++ b/packages/mobile/src/button/src/button.less
@@ -1,21 +1,23 @@
 :root,
 :host {
-    --pk-button-line-height-xs:1.1;
-    --pk-button-line-height-s:1.2;
-    --pk-button-line-height-m:1.7;
-    --pk-button-line-height-l:2;
-    --pk-button-line-height-xl:2.5;
-    --pk-button-line-height-sub:1.53;
+    --pk-button-line-height-xs: 1.1;
+    --pk-button-line-height-s: 1.2;
+    --pk-button-line-height-m: 1.7;
+    --pk-button-line-height-l: 2;
+    --pk-button-line-height-xl: 2.5;
+    --pk-button-line-height-sub: 1.53;
 
-    --pk-button-z-index-text:var(--pk-z-index-min);
-    --pk-button-z-index-mask:var(--pk-z-index-min-2);
+    --pk-button-z-index-text: var(--pk-z-index-min);
+    --pk-button-z-index-mask: var(--pk-z-index-min-2);
 
-    --pk-button-primary-background:var(--pk-primary-color);
-    --pk-button-primary-border-color:var(--pk-primary-color);
-    --pk-button-primary-text-color:var(--pk-primary-color);
+    --pk-button-primary-background: var(--pk-primary-color);
+    --pk-button-primary-border-color: var(--pk-primary-color);
+    --pk-button-primary-text-color: var(--pk-primary-color);
 }
 
-.pk-button{
+@namespace: pk-button;
+
+.@{namespace} {
     position: relative;
     cursor: pointer;
     border-radius: var(--pk-radius-m);
@@ -28,11 +30,11 @@
         left: 50%;
         width: 100%;
         height: 100%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
         background: var(--pk-bg-color);
         border: inherit;
         border-color: var(--pk-bg-color);
-        border-radius: inherit; 
+        border-radius: inherit;
         opacity: 0;
         content: ' ';
         z-index: var(--pk-button-z-index-mask);
@@ -42,29 +44,54 @@
         opacity: .3;
     }
 
-    &--danger{
-        --pk-button-primary-background:var(--pk-error-color);
-        --pk-button-primary-border-color:var(--pk-error-color);
-        --pk-button-primary-text-color:var(--pk-error-color);
+    &__container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        .@{namespace}__loading {
+            --pk-loading-color: currentColor;
+            --pk-loading-text-color: currentColor;
+            margin: 0 var(--pk-margin-s) 0 0;
+        }
+
+        .@{namespace}__content {
+            .@{namespace}__text {
+                position: relative;
+                z-index: var(--pk-button-z-index-text);
+            }
+
+            .@{namespace}-sub__text {
+                font-size: var(--pk-font-size-xs);
+                line-height: var(--pk-button-line-height-sub);
+                opacity: .6;
+            }
+        }
     }
 
-    &--warning{
-        --pk-button-primary-background:var(--pk-warning-color);
-        --pk-button-primary-border-color:var(--pk-warning-color);
-        --pk-button-primary-text-color:var(--pk-warning-color);
+    &--danger {
+        --pk-button-primary-background: var(--pk-error-color);
+        --pk-button-primary-border-color: var(--pk-error-color);
+        --pk-button-primary-text-color: var(--pk-error-color);
     }
 
-    &--primary{
+    &--warning {
+        --pk-button-primary-background: var(--pk-warning-color);
+        --pk-button-primary-border-color: var(--pk-warning-color);
+        --pk-button-primary-text-color: var(--pk-warning-color);
+    }
+
+    &--primary {
         background: var(--pk-button-primary-background);
         border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
     }
 
-    &--hazy{
+    &--hazy {
         border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
         color: var(--pk-button-primary-text-color);
         background: inherit;
 
-        &::before{
+        &::before {
             content: '';
             position: absolute;
             width: 100%;
@@ -77,53 +104,53 @@
         }
     }
 
-    &--outline{
+    &--outline {
         border: var(--pk-border-width-s) solid var(--pk-border-color);
         color: var(--pk-button-primary-text-color);
         background: inherit;
     }
 
-    &--ghost{
+    &--ghost {
         border: var(--pk-border-width-s) solid var(--pk-button-primary-border-color);
         color: var(--pk-button-primary-text-color);
         background: inherit;
     }
 
-    &--link{
+    &--link {
         background: inherit;
         border: var(--pk-border-width-s) solid transparent;
         color: var(--pk-button-primary-text-color);
     }
 
 
-    &--xs{
-        padding:var(--pk-padding-s);
+    &--xs {
+        padding: var(--pk-padding-s);
         font-size: var(--pk-font-size-s);
-        line-height:var(--pk-button-line-height-xs);
+        line-height: var(--pk-button-line-height-xs);
     }
 
-    &--s{
-        padding:var(--pk-padding-s);
+    &--s {
+        padding: var(--pk-padding-s);
         font-size: var(--pk-font-size-s);
-        line-height:var(--pk-button-line-height-s);
+        line-height: var(--pk-button-line-height-s);
     }
 
-    &--m{
-        padding:var(--pk-padding-m);
+    &--m {
+        padding: var(--pk-padding-m);
         font-size: var(--pk-font-size-m);
-        line-height:var(--pk-button-line-height-m);
-    }
-    
-    &--l{
-        padding:var(--pk-padding-m);
-        font-size: var(--pk-font-size-m);
-        line-height:var(--pk-button-line-height-l);
+        line-height: var(--pk-button-line-height-m);
     }
 
-    &--xl{
-        padding:var(--pk-padding-m);
+    &--l {
+        padding: var(--pk-padding-m);
+        font-size: var(--pk-font-size-m);
+        line-height: var(--pk-button-line-height-l);
+    }
+
+    &--xl {
+        padding: var(--pk-padding-m);
         font-size: var(--pk-font-size-l);
-        line-height:var(--pk-button-line-height-xl);
+        line-height: var(--pk-button-line-height-xl);
     }
 
     &--round {
@@ -134,27 +161,17 @@
         border-radius: 0;
     }
 
-    &--block{
+    &--block {
         display: block;
         width: 100%;
     }
 
-    &--disabled{
+    &--disabled {
         opacity: var(--pk-disabled-opacity);
+
         &::after {
             display: none;
         }
     }
 
-    &__text{
-        position: relative;
-        z-index: var(--pk-button-z-index-text);
-    }
-
-    &-sub__text{
-        font-size: var(--pk-font-size-xs);
-        line-height: var(--pk-button-line-height-sub);
-        opacity: .6;
-    }
-    
 }
