📃 docs: Overlay组件文档完善

--- a/packages/mobile/src/overlay/src/overlay.less
+++ b/packages/mobile/src/overlay/src/overlay.less
@@ -1,11 +1,12 @@
 :root,
 :host {
-    --pk-overlay-background:var(--pk-overlay-bg-color);
-    --pk-overlay-z-index:var(--pk-z-index-max);
+    --pk-overlay-background: var(--pk-overlay-bg-color);
+    --pk-overlay-z-index: var(--pk-z-index-max);
 }
 
+@namespace: pk-overlay;
 
-.pk-overlay{
+.@{namespace} {
     position: fixed;
     top: 0;
     left: 0;
