✨ feat: 命令式调用Toast

--- a/packages/mobile/src/toast/src/toast.less
+++ b/packages/mobile/src/toast/src/toast.less
@@ -9,9 +9,9 @@
     --pk-toast-font-size: var(--pk-font-size-xs);
 }
 
+@namespace: pk-toast;
 
-
-.pk-toast {
+.@{namespace} {
     position: fixed;
     background: var(--pk-toast-background);
     padding: var(--pk-toast-padding-s) var(--pk-toast-padding-l);
