--- a/packages/mobile/src/loading/src/loading.less
+++ b/packages/mobile/src/loading/src/loading.less
@@ -3,104 +3,129 @@
     --pk-loading-size: 30px;
     --pk-loading-text-color: var(--pk-text-color-disabled);
     --pk-loading-color: var(--pk-text-color-secondary);
+    --pk-loading-animation-duration: var(--pk-animation-duration);
+    --pk-loading-text-size: var(--pk-font-size-s);
+    --pk-loading-text-color: var(--pk-text-color-secondary);
+    --pk-loading-margin: var(--pk-margin-s);
 }
 
+@namespace: pk-loading;
 
-.pk-loading {
+.@{namespace} {
     position: relative;
     color: var(--pk-loading-text-color);
     font-size: 0;
     vertical-align: middle;
+    display: flex;
+    align-items: center;
 
-    &__spinner {
-        position: relative;
-        display: inline-block;
-        width: var(--pk-loading-size);
-        height: var(--pk-loading-size);
-        vertical-align: middle;
-        animation: pk-rotate var(--pk-animation-duration) linear infinite;
-    }
+    &--vertical {
+        flex-direction: column;
+        justify-content: center;
 
-    &__line {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-
-        &::before {
-            content: ' ';
-            background-color: var(--pk-loading-color);
-            display: block;
-            width: 2px;
-            height: 30%;
-            margin: 0 auto;
-        }
-
-        .generate-spinner(@n, @i: 1) when (@i =< @n) {
-            &--@{i} {
-                transform: rotate(@i * 45deg);
-                opacity: (0.125 * @i);
-            }
-
-            .generate-spinner(@n, (@i + 1));
-        }
-
-        .generate-spinner(12);
-    }
-
-    &__circle {
-        width: var(--pk-loading-size);
-        height: var(--pk-loading-size);
-        animation: pk-rotate var(--pk-animation-duration) ease-in-out infinite;
-    }
-
-    &__circle1 {
-        stroke-width: 3;
-        animation: circle1 calc(var(--pk-animation-duration)* 1.5) ease-in-out infinite;
-        transform: rotate(-90deg);
-        transform-origin: bottom right;
-        stroke: var(--pk-loading-color);
-
-        @keyframes circle1 {
-            0% {
-                stroke-dasharray: 1, 200;
-                stroke-dashoffset: 0;
-            }
-
-            50% {
-                stroke-dasharray: 90, 150;
-                stroke-dashoffset: -40;
-            }
-
-            100% {
-                stroke-dasharray: 90, 150;
-                stroke-dashoffset: -120;
-            }
+        .@{namespace}__icon {
+            margin: var(--pk-loading-margin) 0;
         }
     }
 
-    &__circle2 {
-        stroke-width: 3;
-        transform: rotate(-90deg);
-        transform-origin: bottom right;
-        animation: circle2 calc(var(--pk-animation-duration)* 2.5) linear infinite;
-        stroke: var(--pk-loading-color);
+    &__text {
+        font-size: var(--pk-loading-text-size);
+        color: var(--pk-loading-text-color);
+    }
 
-        @keyframes circle2 {
-            0% {
-                stroke-dasharray: 1, 100;
-                stroke-dashoffset: 0;
+    &__icon {
+        margin: 0 var(--pk-loading-margin);
+
+        .@{namespace}__spinner {
+            position: relative;
+            display: inline-block;
+            width: var(--pk-loading-size);
+            height: var(--pk-loading-size);
+            vertical-align: middle;
+            animation: pk-rotate var(--pk-loading-animation-duration) linear infinite;
+        }
+
+        .@{namespace}__line {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+
+            &::before {
+                content: ' ';
+                background-color: var(--pk-loading-color);
+                display: block;
+                width: 2px;
+                height: 30%;
+                margin: 0 auto;
             }
 
-            50% {
-                stroke-dasharray: 45, 75;
-                stroke-dashoffset: -20;
+            .generate-spinner(@n, @i: 1) when (@i =< @n) {
+                &--@{i} {
+                    transform: rotate(@i * 45deg);
+                    opacity: (0.125 * @i);
+                }
+
+                .generate-spinner(@n, (@i + 1));
             }
 
-            100% {
-                stroke-dasharray: 45, 75;
-                stroke-dashoffset: -60;
+            .generate-spinner(12);
+        }
+
+        .@{namespace}__circle {
+            width: var(--pk-loading-size);
+            height: var(--pk-loading-size);
+            animation: pk-rotate var(--pk-loading-animation-duration) ease-in-out infinite;
+        }
+
+        .@{namespace}__circle1 {
+            stroke-width: 3;
+            animation: circle1 calc(var(--pk-loading-animation-duration)* 1.5) ease-in-out infinite;
+            transform: rotate(-90deg);
+            transform-origin: bottom right;
+            stroke: var(--pk-loading-color);
+
+            @keyframes circle1 {
+                0% {
+                    stroke-dasharray: 1, 200;
+                    stroke-dashoffset: 0;
+                }
+
+                50% {
+                    stroke-dasharray: 90, 150;
+                    stroke-dashoffset: -40;
+                }
+
+                100% {
+                    stroke-dasharray: 90, 150;
+                    stroke-dashoffset: -120;
+                }
+            }
+        }
+
+        .@{namespace}__circle2 {
+            stroke-width: 3;
+            transform: rotate(-90deg);
+            transform-origin: bottom right;
+            animation: circle2 calc(var(--pk-loading-animation-duration)* 2.5) linear infinite;
+            stroke: var(--pk-loading-color);
+
+            @keyframes circle2 {
+                0% {
+                    stroke-dasharray: 1, 100;
+                    stroke-dashoffset: 0;
+                }
+
+                50% {
+                    stroke-dasharray: 45, 75;
+                    stroke-dashoffset: -20;
+                }
+
+                100% {
+                    stroke-dasharray: 45, 75;
+                    stroke-dashoffset: -60;
+                }
             }
         }
     }
