--- a/packages/mobile/src/picker-view/src/picker-column.less
+++ b/packages/mobile/src/picker-view/src/picker-column.less
@@ -13,6 +13,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
+            overflow: hidden;
         }
     }
 }
