📃 docs: 完善Picker组件的文档

--- a/packages/mobile/src/picker-view/src/picker-toolbar.less
+++ b/packages/mobile/src/picker-view/src/picker-toolbar.less
@@ -20,6 +20,8 @@
     .@{namespace}__left {
         margin: var(--pk-picker-toolbar-item-margin);
         color: var(--pk-picker-toolbar-item-info-color);
+        cursor: pointer;
+        user-select: none;
 
         &:active {
             opacity: .3;
@@ -38,6 +40,8 @@
     .@{namespace}__right {
         margin: var(--pk-picker-toolbar-item-margin);
         color: var(--pk-picker-toolbar-item-confirm-color);
+        cursor: pointer;
+        user-select: none;
 
         &:active {
             opacity: .3;
